# kalshi_collector_backtest

./: .gitignore  Cargo.toml  README.md  dashboard.py  trading.db  trading.db-shm  trading.db-wal
src/: lib.rs  models.rs
src/db/: mod.rs
src/kalshi/: auth.rs  mod.rs  rest.rs  ws.rs
