[package]
name = "trading"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "collector"
path = "src/bin/collector.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
axum = "0.7"
rsa = { version = "0.9", features = ["sha2"] }
dotenvy = "0.15"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
